<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LUFELF</string>
    <string name="title_activity_news_feed">News Feed</string>

    <!-- drawer options -->
    <!-- group headings -->
    <string name="news_feed_activity">News Feed</string>
    <string name="friends_activity">Friends</string>
    <string name="events_activity">Events</string>
    <string name="locations_activity">Locations</string>
    <string name="settings_activity">Settings</string>
    <string name="search_activity">Search</string>
    <string name="messages_activity">Messages</string>


    eventItems.add(new NavDrawerItem("- Search Events",0));

    placeItems.add(new NavDrawerItem("- View Locations",0));
    placeItems.add(new NavDrawerItem("- Create Location",0));
    placeItems.add(new NavDrawerItem("- Search Locations",0));
    <!-- subheadings -->
    <string name="view_friends_text">- View Friends List</string>
    <string name="view_friend_request_text">- View Friend Requests</string>
    <string name="search_users_text">- Search Users</string>

    <string name="view_event_text">- View Events</string>
    <string name="create_event_text">- Create Event</string>
    <string name="search_events_text">- Search Events</string>

    <string name="view_locations_text">- View Locations</string>
    <string name="create_location_text">- Create Location</string>
    <string name="search_locations_text">- Search Locations</string>

    <!-- navigation accessibility Strings -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- actionbar Strings -->
    <string name="action_friends">Friends</string>
    <string name="action_events">Events</string>
    <string name="action_locations">Locations</string>
    <string name="action_messages">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_friends">FriendsActivity</string>


    <!-- Error message Strings -->
    <string name="already_here">Woah! You\'re already here...</string>

    <!-- Login fragment -->
    <string name="login_text">Login</string>

    <!-- Register fragment -->
    <string name="register_text">Register</string>
    <string name="register_name">Name</string>
    <string name="register_libno">Library Card Number</string>
    <string name="register_emailadd">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_confirmpassword">Confirm Password</string>
    <string name="register_dob">Date Of Birth</string>


    <!-- Create Event fragment -->

    <string name="event_text">Create Event</string>
    <string name="event_name">Name</string>
    <string name="event_type">Type</string>
    <string name="event_place">Location</string>
    <string name="event_date_time">Time and Date</string>
    <string name="event_description">Description</string>
    <!-- Event sub fragment -->
    <string name="event_subfragment_location">View On Map</string>
    <!-- Create Place fragment -->
    <string name="place_text">Create Place</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Address</string>
    <string name="place_type">Place Type</string>
    <string name="place_description">Description</string>


    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_show_hide_location">Show/Hide Location</string>
    <string name="settings_delete_user">Delete Account</string>

    <!-- Messages List Layout -->
    <string name="messages_title">Messages</string>
    <string name="messages_from">From:</string>
    <string name="messages_to">To:</string>
    <string name="messages_message">Message:</string>

    <!--PLACE types -->
    <string-array name="place_types">
        <item>Pub</item>
        <item>Restaurant</item>
        <item>Lecture Theatre</item>
        <item>Seminar Room</item>
        <item>Cafe</item>
        <item>Takeaway</item>
        <item>Cinema</item>
        <item>Hall</item>
        <item>Shop</item>
        <item>Library</item>
        <item>Other</item>
    </string-array>

    <!--EVENT types -->
    <string-array name="event_types">
        <item>Social</item>
        <item>University</item>
        <item>Open Day</item>
        <item>Private</item>
        <item>Public</item>
        <item>Party</item>
        <item>Study</item>
    </string-array>
</resources>