<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/register_title"
                android:layout_height="wrap_content"
                android:textColor="@color/titletxt"
                android:textSize="@dimen/title"
                android:text="@string/register_text"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_background"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"

                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:id="@+id/registation_liner_layout"
                >

                <EditText
                    android:capitalize="sentences"
                    android:id="@+id/register_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:lines="1"
                    android:background="@drawable/text_field"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:hint="@string/register_name"/>

                <EditText
                    android:id="@+id/register_lib_no"
                    android:layout_width="fill_parent"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:background="@drawable/text_field"
                    android:hint="@string/register_libno"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/register_email_add"
                    android:layout_width="fill_parent"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:background="@drawable/text_field"
                    android:hint="@string/register_emailadd"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="fill_parent"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:background="@drawable/text_field"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="fill_parent"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:background="@drawable/text_field"
                    android:hint="@string/register_confirmpassword"
                    android:inputType="textPassword"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/register_dob"
                    android:layout_width="fill_parent"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:focusable="false"
                    android:background="@drawable/text_field"
                    android:hint="@string/register_dob"
                    android:inputType="date"
                    android:layout_marginTop="5dp"  />

                <EditText
                    android:capitalize="sentences"
                    android:id="@+id/register_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:gravity="left"
                    android:background="@drawable/text_box_selector"
                    android:layout_marginTop="5dp"
                    android:hint="About You..."    />

            </LinearLayout>

            <Button
                android:id="@+id/register_confim_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/button"
                android:textColor="@color/stdtxt"
                android:text="Confirm"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/registation_liner_layout" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>