<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_bg">
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/register_title"
        android:layout_height="wrap_content"
        android:textColor="@color/titletxt"
        android:textSize="@dimen/title"
        android:text="@string/place_text"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/register_title"
        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/app_bg">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/login_background"
                android:orientation="vertical"
                android:padding="20dp"

                android:id="@+id/registration_linear_layout"
                >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/profile_image"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_question_mark"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>


                <EditText
                    android:id="@+id/create_place_name"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:lines="1"
                    android:background="@drawable/text_field"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/event_name"/>
                <EditText
                    android:id="@+id/create_place_address"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:gravity="left"
                    android:lines="4"
                    android:background="@drawable/text_field"
                    android:inputType="text"
                    android:hint="@string/place_address"/>

                <Spinner
                    android:id="@+id/create_place_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/place_types"
                    android:prompt="@string/place_type"/>


                <EditText
                    android:id="@+id/create_place_description"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:gravity="left"
                    android:lines="4"
                    android:background="@drawable/text_field"
                    android:inputType="text"
                    android:hint="@string/place_description"/>
            </LinearLayout>
            <Button
                android:id="@+id/create_place_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/button"
                android:textColor="@color/stdtxt"
                android:text="Confirm"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_below="@id/registration_linear_layout"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>